# kt-ai

./: .env.example  .gitignore  LICENSES.md  README.md  SECURITY.md  package-lock.json  pyproject.toml
agents/exploration/: agent.py  embeddings.py  llm_provider.py
agents/knowledge_mapper/: agent.py  ingest.py  sample_input.md
agents/learning_path/: agent.py
agents/orchestrator/: agent.py
apps/api/: README.md  config.py  config_demo.py  db.py  docgen.py  main.py  models.py  rate_limit.py  schemas.py  seed.py
apps/web/: README_UI_MIGRATION.md  package-lock.json  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.module.css  page.tsx
apps/web/components/: AnimatedBackground.module.css  AnimatedBackground.tsx  ChatInline.module.css  ChatInline.tsx  ChecklistPanel.module.css  ChecklistPanel.tsx  ContextPanel.module.css  ContextPanel.tsx  Layout.module.css  Layout.tsx  PlaybookPanel.module.css  (+7 more)
contracts/agent_io/: schemas.py
contracts/api/: README.md
contracts/mcp_tools/: confluence.py  github.py  gitlab.py  jira.py
domain/: index_store.py
domain/learning/: models.py
domain/project/: models.py
domain/user/: models.py
infra/config/: settings.py
infra/observability/: logger.py
mcp/confluence/: confluence_client.py  server.py
mcp/gateway/: gateway.py
mcp/github/: github_client.py  server.py
mcp/gitlab/: server.py
mcp/jira/: jira_client.py  server.py
memory/sessions/: store.py
tools/: download_model.sh  prepare_model.py  run_local_server.sh  setup_local_llm.sh  test_explore.py  test_github_integration.sh
(+28 files in other folders)
